# SPQ

./: .gitignore  CMakeLists.txt  README.md  kmeans.hpp
include/: kmeans.hpp  loss.hpp  math_utils.hpp  pq.hpp  product_quantizer.hpp
include/loss/: euclidean_loss.hpp  loss_base.hpp  product_loss.hpp  weighted_loss.hpp
pq/: kmeans.hpp  loss.hpp
spq/: kmeans.hpp  math_utils.hpp  product_quantizer.hpp
spq/loss/: euclidean_loss.hpp  loss_base.hpp  product_loss.hpp  weighted_loss.hpp
tests/: kmeans_test.hpp  loss_test.hpp  main.cpp  math_utils_test.hpp
tests/include/: kmeans_test.hpp  loss_test.hpp  math_utils_test.hpp  product_quantizer_test.hpp
unittests/: CMakeLists.txt  kmeans.cpp  loss.cpp  math_utils.cpp  product_quantizer.cpp
